--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@handsontable/vue": "^4.1.0",
     "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/pwa": "^3.0.0-beta.19",
     "handsontable": "^7.1.1",
     "nuxt": "^2.0.0",
     "ramda": "^0.26.1",
