--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run build",
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
     "@handsontable/vue": "^4.1.0",
@@ -31,6 +32,7 @@
     "eslint-plugin-prettier": "^3.0.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
-    "prettier": "^1.16.4"
+    "prettier": "^1.16.4",
+    "push-dir": "^0.4.1"
   }
 }
